--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Yaswanth Porandla</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Competitive Programmer</span></h3>
                             <p>My programming repertoire includes mastering the elegant dance of C/C++, the versatility of Python, the power of Java, and the artistry of HTML and CSS. And if there's one language I can confidently say I've tamed, it's C++.</p>
-                            <a href="https://docs.google.com/document/d/1NFOVWGZ1Ya9-HKxcVO4M-xn6QlletUSw/edit?usp=sharing&ouid=100543038604646509698&rtpof=true&sd=true" class="btn">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1ZOi8r8HKAY5yMRQu2jzsK7a4NnjA4rO8/view?usp=sharing" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="image/IMG_2095_1.jpg" alt="">
