--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Yaswanth Porandla and <span>Competitive Programmer</span></h3>
-                                    <p>I am currently embarking on an exciting journey at CMR Technical Campus, where I'm pursuing my passion for Computer Science and Engineering (AIML). As a curious third-year student, I'm delving deep into the world of algorithms and exploring the limitless possibilities of Artificial Intelligence. Passion drives me, and it's no secret that Artificial Intelligence holds a special place in my heart. I'm committed to learning something new every day and updating my skills as the tech landscape evolves.</p>
+                                    <p>I am currently embarking on an exciting journey at CMR Technical Campus, where I'm pursuing my passion for Computer Science and Engineering (AIML). As a curious fourth-year student, I'm delving deep into the world of algorithms and exploring the limitless possibilities of Artificial Intelligence. Passion drives me, and it's no secret that Artificial Intelligence holds a special place in my heart. I'm committed to learning something new every day and updating my skills as the tech landscape evolves.</p>
                                 </div>
                             </div>
                             <div class="row">
